[package]
name = "epics-calc-rs"
version.workspace = true
edition.workspace = true
description = "EPICS calc expression engine in Rust — thin wrapper over epics-base-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = ["numeric"]
numeric = []
string = []
array = ["math"]
math = []
epics = ["string", "array"]

[dependencies]
epics-base-rs = { workspace = true }
