[package]
name = "epics-base-rs"
version.workspace = true
edition.workspace = true
description = "Pure Rust EPICS Channel Access client"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
bytes = "1"
hostname = "0.4"
socket2 = { version = "0.5", features = ["all"] }
chrono = "0.4"
epics-macros = { workspace = true }
rustyline = "14"

[dev-dependencies]
epics-ca-rs = { workspace = true }
tempfile = "3"
serial_test = "3"

[[bin]]
name = "pvaget-rs"
path = "src/bin/pvaget-rs.rs"

[[bin]]
name = "pvaput-rs"
path = "src/bin/pvaput-rs.rs"

[[bin]]
name = "pvamonitor-rs"
path = "src/bin/pvamonitor-rs.rs"

[[bin]]
name = "pvainfo-rs"
path = "src/bin/pvainfo-rs.rs"
