[package]
name = "epics-bridge-rs"
version.workspace = true
edition.workspace = true
description = "Bridge between EPICS database records and pvAccess channels (experimental)"
license-file = "LICENSE"
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
epics-pva-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
