[package]
name = "epics-macros"
version.workspace = true
edition = "2021"
description = "Procedural macros for epics-base-rs"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
