[package]
name = "msi-rs"
version.workspace = true
edition = "2021"
description = "EPICS macro substitution and include tool in Rust"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"

[features]
cli = ["dep:clap"]

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "msi-rs"
path = "src/bin/msi.rs"
required-features = ["cli"]
