[package]
name = "epics-seq"
version.workspace = true
edition = "2021"
description = "Rust-native EPICS sequencer runtime"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
epics-base-rs = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
