[package]
name = "ophyd-test-ioc"
version.workspace = true
edition.workspace = true
description = "EPICS IOC for ophyd test suite — replaces Docker-based epics-services-for-ophyd"
publish = false

[dependencies]
ad-core-rs = { workspace = true, features = ["ioc"] }
ad-plugins-rs = { workspace = true, features = ["ioc"] }
asyn-rs = { workspace = true, features = ["epics"] }
motor-rs = { workspace = true }
sim-detector = { path = "../sim-detector" }
parking_lot = "0.12"
rand = "0.9"
libm = "0.2"
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }

[[bin]]
name = "ophyd_test_ioc"
path = "src/bin/ophyd_test_ioc.rs"
