[package]
name = "random-signals"
version.workspace = true
edition.workspace = true
description = "Four random signal PVs updating at 10ms (100 Hz)"
publish = false

[dependencies]
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = { version = "0.9", features = ["small_rng"] }
