[package]
name = "scope-ioc"
version.workspace = true
edition.workspace = true
description = "Scope simulator IOC — port of EPICS testAsynPortDriver"
publish = false

[dependencies]
asyn-rs = { workspace = true, features = ["epics"] }
parking_lot = "0.12"
epics-base-rs = { workspace = true }
epics-ca-rs = { workspace = true }

[[bin]]
name = "scope_ioc"
path = "src/bin/scope_ioc.rs"

[[example]]
name = "scope_sim"
path = "examples/scope_sim.rs"
